--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "^0.25.0",
     "bootstrap": "^5.1.3",
     "cypress": "^9.5.0",
+    "gh-pages": "^3.2.3",
     "node-sass": "^7.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
