--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "weather-app",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://pooyagolchian.github.io/react-weather-app",
   "dependencies": {
     "@material-ui/core": "^4.12.3",
     "@testing-library/cypress": "^8.0.2",
@@ -15,7 +16,6 @@
     "axios": "^0.25.0",
     "bootstrap": "^5.1.3",
     "cypress": "^9.5.0",
-    "gh-pages": "^3.2.3",
     "node-sass": "^7.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
